# hermes-hybrid-rag

./: .gitignore  BUILD.md  CLAUDE.md  HERMES_API.md  Hermes hierarchical-rag Plugin — Implementation Plan.md  README.md  REQUIREMENTS.md  pyproject.toml
.claude/: settings.local.json
advanced_rag/: __init__.py  cli.py  config.py  crag.py  engine.py  expansion.py  indexing.py  parents.py  plugin.yaml  rerank.py  retrieval.py  storage.py  tools.py
advanced_rag/skills/rag-usage/: SKILL.md
hierarchical_rag/: __init__.py  adapters.py  chunking.py  config.py  embeddings.py  hooks.py  indexing.py  parents.py  plugin.yaml  requirements.txt  schemas.py  slash.py  state.py  storage.py  tools.py
hierarchical_rag/skills/rag-usage/: SKILL.md
hybrid_rag/: __init__.py  _anthropic.py  adapters.py  artifacts.py  chunking.py  cli.py  config.py  contextual.py  convo.py  crag.py  embeddings.py  engine.py  expansion.py  extractors.py  formatting.py  hooks.py  indexing.py  manifest.py  models.py  parents.py  pipelines.py  plugin.yaml  protocols.py  rerank.py  retrieval.py  slash.py  state.py  storage.py  tools.py  validation.py
hybrid_rag/skills/rag-usage/: SKILL.md
tests/: conftest.py  test_adapters.py  test_ambient_phase3.py  test_artifacts.py  test_chunking.py  test_cli.py  test_contextual.py  test_crag.py  test_embeddings_config.py  test_engine.py  test_expansion.py  test_extractors.py  test_hook.py  test_indexing.py  test_manifest.py  test_parents.py  test_rerank.py  test_retrieval.py  test_rrf.py  test_schemas.py  test_slash.py  test_state.py  test_storage.py  test_tools.py
(+3 files in other folders)
